--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
     <application
         android:name=".internet.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/main_logo"
         android:label="@string/app_name"
         android:largeHeap="true"
+
         android:supportsRtl="true"
         android:theme="@style/MyAppTheme">
         <meta-data
@@ -23,7 +24,7 @@
             android:theme="@android:style/Theme.Translucent" />
         <activity
             android:name=".DashboardActivity"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".DetailActivity"
             android:screenOrientation="portrait" />
@@ -36,7 +37,10 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".LanguageActivity" >
+        <activity
+            android:name=".LanguageActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
